--- a/.env
+++ b/.env
@@ -1,7 +1,2 @@
-VITE_DISCORD_CLIENT_ID=1392487995055149178
-VITE_FIREBASE_API_KEY=AIzaSyCsF66mqrTdac2t0lKvJU1wwj7Un7CD-No
-VITE_FIREBASE_AUTH_DOMAIN=guildora.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=guildora
-VITE_FIREBASE_STORAGE_BUCKET=guildora.firebasestorage.app
-VITE_FIREBASE_MESSAGING_SENDER_ID=511638093701
-VITE_FIREBASE_APP_ID=1:511638093701:web:e3f275cf085c527e8e4eec
+NEXT_PUBLIC_DISCORD_CLIENT_ID="your_discord_client_id_here"
+DISCORD_CLIENT_SECRET="your_discord_client_secret_here"
